Updates in electronics.html and headphone.html

--- a/headphone.html
+++ b/headphone.html
@@ -322,7 +322,7 @@
         </div>
         <div class="copyright">
             <p class="copyright-text">
-                &copy; 2023 All roghts reserved ||Designed By three friends VISHAL, ANKITA & AYUSHREE
+                &copy; 2025 All roghts reserved ||Designed By Four friends Vishal, Mehraj, Vansh & Yash
 
             </p>
         </div>
